Fix audio in level 1 and game over scene

--- a/Doctor Away/WebVersion/index.html
+++ b/Doctor Away/WebVersion/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/WebVersion.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebVersion.data.br",
-        frameworkUrl: buildUrl + "/WebVersion.framework.js.br",
-        codeUrl: buildUrl + "/WebVersion.wasm.br",
+        dataUrl: buildUrl + "/WebVersion.data",
+        frameworkUrl: buildUrl + "/WebVersion.framework.js",
+        codeUrl: buildUrl + "/WebVersion.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Doctor Away",
